--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ body {
 nav {
   width: 100%;
   height: 4em;
-  background-color: #333;
+  background-color: skyblue;
 }
 
 ul {
@@ -69,6 +69,7 @@ td {
 }
 
 #flex-container {
+  background-color: lavender;
   border: .7px solid black;
   border-radius: 8px;
   display: flex;
