--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
 body {
-  background-color: #FFFEF2;
+  background-color:snow;
 }
 
 nav {
   width: 100%;
   height: 4em;
-  background-color: skyblue;
+  background-color: #333;
 }
 
 ul {
@@ -69,7 +69,7 @@ td {
 }
 
 #flex-container {
-  background-color: lavender;
+  background-color:lightskyblue;
   border: .7px solid black;
   border-radius: 8px;
   display: flex;
@@ -84,4 +84,8 @@ td {
   margin: 5em;
   border-radius: 0;
   background-color: white;
+}
+
+table {
+  margin: 2em auto;
 }
